adds meta info section

--- a/app/scripts/components/Console/console-style.scss
+++ b/app/scripts/components/Console/console-style.scss
@@ -2,7 +2,6 @@
 @import '../../../styles/variables';
 
 .c-console {
-
   .editor-header {
     display: flex;
     justify-content: space-between;
@@ -31,74 +30,13 @@
     }
   }
 
-  .tab-panel {
-    display: flex;
-    justify-content: flex-start;
-
-    .tab {
-      background-color: #454545;
-      height: 30px;
-      width: 150px;
-      color: $white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-transform: uppercase;
-      font-size: rem(12);
-      font-weight: 600;
-      position: relative;
-      border-radius: 5px 5px 0 0;
-      margin-left: rem(16);
-      z-index: 1;
-      cursor: pointer;
-
-      &:before {
-        content: "";
-        width: 20px;
-        height: 40px;
-        transform: rotate(30deg);
-        position: absolute;
-        top: 1px;
-        left: -9px;
-        border-radius: 5px;
-        background-color: #454545;
-      }
-
-      &:after {
-        content: "";
-        width: 20px;
-        height: 40px;
-        transform: rotate(-30deg);
-        position: absolute;
-        top: 1px;
-        right: -9px;
-        border-radius: 5px;
-        background-color: #454545;
-      }
-
-      &.active {
-        background-color: #212024;
-        z-index: 2;
-        &:before,
-        &:after {
-          background-color: #212024;
-        }
-      }
-    }
-  }
-
   .console {
     width: 100%;
     min-height: 45vh;
     background-color: $theme-alternative;
     border-radius: 10px;
     padding: $small-margin;
-    z-index: 3;
     position: relative;
-
-    &.has-tabs {
-      border-radius: 2px 10px 10px 10px;
-    }
 
     .tab-bar {
       margin-bottom: $small-margin;
@@ -146,10 +84,10 @@
       padding: 0 $small-margin;
       font-size: $font-size-xsmall;
       line-height: 18px;
-
-      overflow: overlay;
+      overflow: auto;
 
       pre, code {
+        margin: 0;
         font-family: Menlo, monospace;
         white-space: pre-wrap;
       }
