--- a/app/scripts/components/Search/search-style.scss
+++ b/app/scripts/components/Search/search-style.scss
@@ -59,7 +59,7 @@ $checkbox-color: #aea6a6;
     // box-shadow: $box-shadow-1;
     font-size: rem(16);
     list-style: none;
-    overflow: overlay;
+    overflow: auto;
     cursor: pointer;
 
     .search-results-item {
