--- a/app/scripts/components/PlaygroundDetail/playground-detail-template.html
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-template.html
@@ -3,29 +3,42 @@
     <div class="column small-3"></div>
     <div class="column small-9">
       <article-component grid-column="medium-12">
-        <h1 class="dataset-title" v-if="selectedDataset">{{selectedDataset.name}}</h1>
-        <p v-if="metadata" class="dataset-description">
-          {{metadata.description}}
-        </p>
+        <section class="dataset-detail-section">
+          <h1 class="dataset-title" v-if="selectedDataset">{{selectedDataset.name}}</h1>
+          <p v-if="metadata" class="dataset-description">
+            {{metadata.description}}
+          </p>
 
-        <h3 class="details-section-heading">About this dataset</h3>
-        <div class="row -equal-height">
-          <div
-            v-for="detail in metadataDetails"
-            class="column small-6 medium-4"
-          >
-            <div class="detail-container">
-              <span class="detail-heading">{{detail.heading}}</span>
-              <p class="detail-value">{{detail.value}}</p>
+          <h3 class="section-title">About this dataset</h3>
+          <div class="row -equal-height">
+            <div
+              v-for="detail in metadataDetails"
+              class="column small-6 medium-4"
+            >
+              <div class="detail-container">
+                <span class="detail-heading">{{detail.heading}}</span>
+                <p class="detail-value">{{detail.value}}</p>
+              </div>
             </div>
           </div>
-        </div>
+        </section>
 
-        <div class="code-examples-header">
-          <h3>Code examples</h3>
-          <a>Learn how to use these data</a>
-        </div>
-        <console-component :selectedDataset="selectedDataset"></console-component>
+        <section class="dataset-detail-section">
+          <div class="code-examples-header">
+            <h3>Code examples</h3>
+            <a>Learn how to use these data</a>
+          </div>
+          <console-component :selectedDataset="selectedDataset"></console-component>
+        </section>
+
+        <section class="dataset-detail-section" v-if="metadata && Object.keys(metadata.info).length > 0">
+          <h3 class="section-title">Additional info</h3>
+          <div class="metadata-info-box">
+            <pre>
+              <code class="json" ref="metadataInfo">{{metadata.info}}</code>
+            </pre>
+          </div>
+        </section>
       </article-component>
     </div>
   </div>
