adds sticky sidebar

--- a/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/variables';
 
 .c-playground-detail {
-
+  background: linear-gradient(to right, #f0f0f0 0%, #f0f0f0 20%, $white 20%, $white 100%);
   .dataset-detail-section {
     margin: 0 0 115px 0;
     &:last-child {
@@ -32,6 +32,7 @@
 
   .detail-value {
     font-size: 14px;
+    word-break: break-all;
   }
 
   .code-examples-header {
@@ -62,6 +63,50 @@
     }
     .hljs {
       background-color: $theme-alternative;
+    }
+  }
+
+  .dataset-detail-sidebar {
+    background-color: #f0f0f0;
+
+    .sidebar-container {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      height: 100%;
+      width: 100%;
+      padding: 80px 0 0;
+
+      &.-fixed {
+        position: fixed;
+        width: 25%;
+        left: 0;
+        top: 0;
+      }
+    }
+
+    .sidebar-navigation {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+
+      li {
+        margin: 0 0 5px 0;
+        &:last-child {
+          margin: 0;
+        }
+      }
+
+      a {
+        font-size: 14px;
+        line-height: 1.64;
+        color: #a2a2a2;
+        text-transform: capitalize;
+
+        &.-active {
+          color: $theme-blue;
+        }
+      }
     }
   }
 }
