--- a/app/scripts/components/ExamplesDetail/examples-template.html
+++ b/app/scripts/components/ExamplesDetail/examples-template.html
@@ -1,28 +1,42 @@
 <div class="c-examples-detail">
   <div class="c-examples-detail-intro">
     <div class="row" >
-      <div class="column small-12 medium-6 info-column">
-        <span>API HIGHWAYS EXAMPLES</span>
-        <h1>{{example.title}}</h1>
-        <div>
-          Related organization: {{example.organization}}
-          Last update: {{example.lastUpdate}}
-        </div>
-        <div>
-          See source code {{example.sourceCode}}
-          Share
-        </div>
-      </div >
+      <div class="column small-12">
+        <router-link class="breadcrumb" active-class="-active" to="/examples" exact>
+          API HIGHWAYS EXAMPLES
+        </router-link>
+      </div>
+      <div class="column small-12">
+        <h1 class="c-examples-detail-intro__title">{{example.title}}</h1>
+      </div>
+      <div class="column small-12 medium-6 c-examples-detail-intro__metadata">
+        <span>Related organization: {{example.organization}}</span>
+        <span>Last update: {{example.lastUpdate}}</span>
+      </div>
+      <div class="column small-12 medium-6 c-examples-detail-intro__metadata">
+        <a :href="example.sourceCode" target="_blank" rel="noopener noreferrer">See source code</a>
+        <span class="separator"></span>
+        <span>Share</span>
+      </div>
     </div >
   </div >
   <div class="c-examples-detail-content">
     <div class="row" >
-      <div class="column small-12 medium-6 info-column">
-        {{example.content}}
+      <div class="column small-12">
+        <h2 class="c-examples-detail-content__title">Description</h2>
+      </div>
+      <div class="column small-12 medium-8">
+        <p class="c-examples-detail-content__text">{{example.content}}</p>
       </div >
-      <a :href="example.url">Go to site</a>
-
-      <img :src="example.images[0]" alt="">
+      <div class="column small-12 medium-2 medium-offset-2 align-self-bottom">
+        <a class="c-button -link" :href="example.url" target="_blank" rel="noopener noreferrer">Go to site</a>
+      </div >
     </div >
+      <div class="row">
+
+      <div class="column small-12">
+        <img :src="example.images[0]" alt="">
+      </div>
+    </div>
   </div >
 </div >
