--- a/app/scripts/components/Banner/banner-template.html
+++ b/app/scripts/components/Banner/banner-template.html
@@ -10,8 +10,8 @@
 
           <div class="column small-6 medium-4">
             <div class="c-button-group -center">
-              <button-component class="-bordered -big" :click="goToContactForm">{{actionName}}</button-component>
-              <button-component class="-bordered dismiss-bg" :click="action">Dismiss</button-component>
+              <button-component class="-bordered -big -filled" :click="goToContactForm">{{actionName}}</button-component>
+              <button-component class="-bordered -dismiss" :click="action">Dismiss</button-component>
             </div>
           </div>
         </div>
