--- a/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-style.scss
@@ -12,7 +12,15 @@
   }
 
   .dataset-detail-section {
-    margin: 0 0 115px 0;
+    margin: 0 0 $large-margin 0;
+    padding: $large-margin 0 0 0;
+    border-top: solid 1px #f0f0f0;
+
+    &:first-child {
+      border-top: 0;
+      padding: 0;
+    }
+
     &:last-child {
       margin: 0;
     }
