--- a/app/scripts/components/Dataset/dataset-style.scss
+++ b/app/scripts/components/Dataset/dataset-style.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: rem(200);
+  box-shadow: 0 15px 50px -5px rgba(0, 0, 0, 0.25);
 
   &.dataset-detail {
     padding: 0;
