Set image limit to 3

--- a/app/scripts/components/Carousel/carousel-style.scss
+++ b/app/scripts/components/Carousel/carousel-style.scss
@@ -27,7 +27,7 @@
     align-items: center;
     cursor: pointer;
     padding: 2px;
-    flex-basis: calc(33% - 25px);
+    flex-basis: 33%;
     margin-right: 25px;
     background-size: cover;
     background-repeat: no-repeat;
