--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -73,6 +73,10 @@ $large-margin: 80px;
 // Sizes
 $max-width: rem(1136);
 $footer-height: 10vh;
+
+// Icon
+$icon-color: #a2a2a2;
+
 // Breakpoints
 
 // Media Queries
