--- a/app/scripts/components/ExamplesDetail/examples-style.scss
+++ b/app/scripts/components/ExamplesDetail/examples-style.scss
@@ -10,7 +10,8 @@
       align-items: center;
       display: flex;
       > a,
-      > span {
+      > span,
+      > button {
         display: flex;
         align-items: center;
         line-height: 1.63;
