Include lock icon symbol

--- a/app/scripts/components/PlaygroundDetail/playground-detail-template.html
+++ b/app/scripts/components/PlaygroundDetail/playground-detail-template.html
@@ -97,7 +97,7 @@
                 </div>
               </template>
               <template v-else>
-                <icon-component name="icon-share" class="-medium"></icon-component>
+                <icon-component name="icon-lock" class="-medium"></icon-component>
                 <div class="tooltip-container" slot="popover">
                       <span class="tooltip-heading">
                         Sandbox environment
