--- a/app/styles/lib/v-tooltip.css
+++ b/app/styles/lib/v-tooltip.css
@@ -1,22 +1,14 @@
+/* https://github.com/Akryum/v-tooltip#style-examples */
 .tooltip {
-  display: block !important;
+  display: block;
   z-index: 10000;
-}
-
-.tooltip .tooltip-inner {
-  background: black;
-  color: white;
-  border-radius: 16px;
-  padding: 5px 10px 4px;
 }
 
 .tooltip .tooltip-arrow {
   width: 0;
   height: 0;
-  border-style: solid;
   position: absolute;
   margin: 5px;
-  border-color: black;
   z-index: 1;
 }
 
@@ -36,48 +28,21 @@
 }
 
 .tooltip[x-placement^="bottom"] {
-  margin-top: 5px;
 }
 
 .tooltip[x-placement^="bottom"] .tooltip-arrow {
-  border-width: 0 5px 5px 5px;
-  border-left-color: transparent !important;
-  border-right-color: transparent !important;
-  border-top-color: transparent !important;
-  top: -5px;
-  left: calc(50% - 5px);
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .tooltip[x-placement^="right"] {
-  margin-left: 5px;
 }
 
 .tooltip[x-placement^="right"] .tooltip-arrow {
-  border-width: 5px 5px 5px 0;
-  border-left-color: transparent !important;
-  border-top-color: transparent !important;
-  border-bottom-color: transparent !important;
-  left: -5px;
-  top: calc(50% - 5px);
-  margin-left: 0;
-  margin-right: 0;
 }
 
 .tooltip[x-placement^="left"] {
-  margin-right: 5px;
 }
 
 .tooltip[x-placement^="left"] .tooltip-arrow {
-  border-width: 5px 0 5px 5px;
-  border-top-color: transparent !important;
-  border-right-color: transparent !important;
-  border-bottom-color: transparent !important;
-  right: -5px;
-  top: calc(50% - 5px);
-  margin-left: 0;
-  margin-right: 0;
 }
 
 .tooltip.popover .popover-inner {
